--- a/config.example.ini
+++ b/config.example.ini
@@ -1,9 +1,9 @@
 # Required settings
 # -----------------
-token = REPLACE_WITH_TOKEN
-mainGuildId = REPLACE_WITH_MAIN_SERVER_ID
-mailGuildId = REPLACE_WITH_INBOX_SERVER_ID
-logChannelId = REPLACE_WITH_LOG_CHANNEL_ID
+token = NzIzMzg5ODY1MDEzNjc0MDk1.XwaZWg.vyXfr_w_jiqIuWwB-5efSXrBBNY
+mainGuildId = 730003438821310494
+mailGuildId = 730639873106772060
+logChannelId = 730429413056970824
 
 # Add new options below this line:
 # ----------------------------------
